@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.42
+ * @version 0.13.44
  */
 
 /* Breaks */
@@ -52,7 +52,7 @@
 @title-border: darkorange;
 
 /* Dimensions */
-@alert-min-width: 10rem;
+@alert-min-width: 6rem;
 @alert-max-width: 18rem;
 @alert-info-min-width: 12.5rem;
 @alert-info-max-width: 40rem;
